# discodb

./: .gitignore  CMakeLists.txt  DISCODB_LICENSING.txt  Makefile  README  README.md  setup.py
doc/: conf.py  index.rst
doc/.static/: sphinxdoc.css
erlang/: .gitignore  rebar.config
erlang/c_src/: ddb.c  ddb_cmph.c  ddb_cnf.c  ddb_cons.c  ddb_delta.c  ddb_deltalist.c  ddb_huffman.c  ddb_list.c  ddb_map.c  ddb_membuffer.c  ddb_queue.c  discodb_nif.c  queue.c  queue.h
erlang/src/: discodb.app.src  discodb.erl  discodb_nif.erl
erlang/util/: discodb
lua/: discodb.lua
python/: discodb.spec  discodbmodule.c  discodbmodule.h  setup.py
python/discodb/: __init__.py  query.py
python/util/: perf.py  test_merge.py
src/: ddb.c  ddb_bits.h  ddb_cmph.c  ddb_cnf.c  ddb_cons.c  ddb_huffman.c  ddb_internal.h  ddb_list.c  ddb_list.h  ddb_map.c  ddb_map.h  ddb_profile.h  ddb_view.c  discodb.h  discodbmodule.c  discodbmodule.h  libdiscodb.spec
src/discodb/: query.py
src/util/: create.c  query.c
util/: benchmark-views.py  compile  query_discodb.c
